--- a/estilo/style.css
+++ b/estilo/style.css
@@ -32,3 +32,30 @@ section#celular{
     background: url(../imagens/frame-iphone.png)no-repeat;
 }
 
+section#social{
+    text-align: right;
+}
+
+section#social img{
+    
+    width: 50px;
+    margin: 10px;
+    border-radius:50% ;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.434);
+    box-sizing: border-box;
+}
+
+section#social img:hover{
+    border: 2px solid white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.628);
+    transform: translate(-3px, -3px) ;
+    transition: 0.5s;
+}
+
+iframe#tela{
+    position: relative;
+    top:81px ;
+    left:23px ;
+    width:266px ;
+    height:470px ;
+}
